// Original proto file in shopping-order-service-scala
syntax = "proto3";

option java_multiple_files = true;
option java_package = "sample.shoppingorder.proto";
option java_outer_classname = "ShoppingOrderProto";

package shoppingorder;

// gRPC definition for ShoppingOrderService

service ShoppingOrderService {
    rpc Order (OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
    string cartId = 1;
    repeated Item items = 2;
}

message Item {
    string itemId = 1;
    int32 quantity = 2;
}

message OrderResponse {
    bool ok = 1;
}
